--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "@mui/icons-material": "^5.10.14",
         "@mui/material": "^5.10.14",
         "axios": "^1.1.3",
+        "notistack": "^2.0.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-query": "^3.39.2",
