--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "build:local": "set BUILD_PATH=../build && react-scripts build",
+        "server:local": "python",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
