--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "build:local": "set BUILD_PATH=../server/build&&react-scripts build",
-        "server:local": "cd ../server&&py main.py",
+        "server:local": "cd ../server&&python3.10 main.py",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
